--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.1.5",
     "bootstrap": "^4.4.1",
+    "grommet": "^2.13.0",
+    "grommet-icons": "^4.4.0",
     "moment": "^2.24.0",
     "moment-with-locales-es6": "^1.0.1",
+    "polished": "^3.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-table-v6": "^6.8.6"
+    "react-table-v6": "^6.8.6",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
