--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
+    "@fullcalendar/interaction": "^4.4.0",
+    "@fullcalendar/react": "^4.4.0",
+    "@fullcalendar/timegrid": "^4.4.0",
     "@material-ui/core": "^4.9.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -12,6 +17,7 @@
     "grommet-icons": "^4.4.0",
     "moment": "^2.24.0",
     "moment-with-locales-es6": "^1.0.1",
+    "node-sass": "^4.14.1",
     "polished": "^3.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
